syntax = "proto3";

package mizer.media;

service MediaApi {
  rpc CreateTag (CreateMediaTag) returns (MediaTag);
  rpc GetTagsWithMedia (GetMediaTags) returns (GroupedMediaFiles);
  rpc GetMedia (GetMediaRequest) returns (MediaFiles);
}

message GetMediaTags {
}

message GetMediaRequest {
}

message CreateMediaTag {
  string name = 1;
}

message MediaTags {
  repeated MediaTag tags = 1;
}

message MediaTag {
  string id = 1;
  string name = 2;
}

message MediaFiles {
  repeated MediaFile files = 1;
  MediaFolders folders = 2;
}

message MediaFile {
  string id = 1;
  string name = 2;
  MediaType type = 3;
  MediaMetadata metadata = 4;
  optional string thumbnail_path = 5;
}

message MediaMetadata {
  string source_path = 1;
  uint64 file_size = 2;
  repeated MediaTag tags = 3;
  optional Dimensions dimensions = 4;
  optional uint64 duration = 5;
  optional double framerate = 6;
  optional string album = 7;
  optional string artist = 8;

  message Dimensions {
    uint64 width = 1;
    uint64 height = 2;
  }
}

enum MediaType {
  IMAGE = 0;
  AUDIO = 1;
  VIDEO = 2;
  VECTOR = 3;
}

message GroupedMediaFiles {
  repeated MediaTagWithFiles tags = 1;
}

message MediaTagWithFiles {
  MediaTag tag = 1;
  repeated MediaFile files = 2;
}

message MediaFolders {
  repeated string paths = 1;
}

message ImportMediaRequest {
  repeated string files = 1;
}
